fix(cloudbuild): fix Maven image and Dockerfile for improved configuration