@@ -1,3 +1,5 @@
 FROM eclipse-temurin:24-jre
+WORKDIR /app
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+EXPOSE 8080
+ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
